--- a/cssm/kontak.css
+++ b/cssm/kontak.css
@@ -1,6 +1,7 @@
 /*======================================
  Contact CSS
 ========================================*/
+
 .contact-us {
 	position: relative;
 	z-index: 43;
@@ -24,13 +25,14 @@
 	box-shadow: 0px 0px 15px #0000001a;
 	height: 100%;
 }
-.contact-us .single-info {
+.contact-us .kotak {
 	text-align: left;
 	margin-bottom:30px;
 }
-.contact-us .single-info i {
-	color: #fff;
+
+.contact-us .kotak i{
 	font-size: 18px;
+	color: #FFF;
 	display: inline-block;
 	margin-bottom: 15px;
 	height: 40px;
@@ -41,20 +43,20 @@
 	line-height: 40px;
 	background:#F7941D;
 }
-.contact-us .single-info ul
-.contact-us .single-info ul li{
+.contact-us .kotak ul
+.contact-us .kotak ul li{
 	margin-bottom:5px;
 }
-.contact-us .single-info ul li:last-child{
+.contact-us .kotak ul li:last-child{
 	margin-bottom:0;
 }
-.contact-us .single-info ul li a{
+.contact-us .kotak ul li a{
 	font-weight:400;
 }
-.contact-us .single-info ul li a:hover{
+.contact-us .kotak ul li a:hover{
 	color:#F7941D;
 }
-.contact-us .single-info .title {
+.contact-us .kotak .title {
 	margin-bottom: 10px;
 	font-weight: 500;
 	color: #333;
